gsl-tracker now works! [gsl-dal.php]     - select() now works     - selectAll() now works     - update() now works
[gsl-service.php]
    - Service now supports selectAll and update
    - selectAll returns json with all grid values in name => value format
    - update takes in a name and value and calls dal-update with those values

[gsl-tracker.js]
    - page will start with init which calls selectAllValues()
    - selectAllValues() will send an ajax request to the service for all grid values
    - intializeGrid() is called when ajax selectAll request comes back and it intializes all grid places
    - updateValue() will submit an ajax request with the name and value to update

- Used ids.js to make gsl-variable.js but currently not used for anything
- index.html: updated with old xml version that has cell id's
- main.css: Added div.status for status indicator at top of page
- dal-test.php: Modified to test new version of selectAll

--- a/main.css
+++ b/main.css
@@ -32,3 +32,8 @@
         background-color: #A8A8A8;
         text-align: center;
     }
+    div.status {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
